--- a/www/index.html
+++ b/www/index.html
@@ -233,7 +233,7 @@
 
     <!-- <script type="text/javascript" src="script.js"></script> -->
     <script type="text/javascript" src="cordova.js"></script>
-    <!-- <script type="text/javascript" src="js/index.js"></script> -->
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
