--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
       </header>
       <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-          <img src="./img/icon.png" class="demo-avatar">
+          <img src="./img/icon.png" class="demo-avatar" id="demo-avatar">
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800" id='content-app'>
         </nav>
